# Benchmarking-Deep-Relational-Database-Models

./: README.md
dbformer/deep-db-learning/: README.md  env.yml  main.py  main_relbench.py  pretrain_float.py  pyproject.toml  relbench_adapter.py  relbench_dataset.py  relbench_source.py  requirements.txt  setup.sh
dbformer/deep-db-learning/db_transformer/data/: __init__.py  ctu_dataset.py  dataset.py  fit_dataset.py
dbformer/deep-db-learning/db_transformer/data/converter/: __init__.py  dataframe_converter.py
dbformer/deep-db-learning/db_transformer/data/convertor/: __init__.py  per_type_convertor.py  schema_convertor.py
dbformer/deep-db-learning/db_transformer/data/dataset_defaults/: __init__.py  ctu_repository_defauts.py  utils.py  (+1 more)
dbformer/deep-db-learning/db_transformer/db/: __init__.py  db_inspector.py  distinct_cnt_retrieval.py  schema_autodetect.py
dbformer/deep-db-learning/db_transformer/helpers/: __init__.py  database.py  objectpickle.py  progress.py  timer.py
dbformer/deep-db-learning/db_transformer/nn/: __init__.py
dbformer/deep-db-learning/db_transformer/schema/: __init__.py  columns.py  schema.py
dbformer/deep-db-learning/experiments/: blueprint_mlflow.py  getml_cilp.py  getml_xgboost.py  srlboost.py
dbformer/deep-db-learning/experiments/blueprint_instances/: __init__.py  excelformer.py  instances.py  mlp.py  sage.py  saint.py  tabnet.py  tabtransformer.py  transformer.py  trompt.py  utils.py
dbformer/deep-db-learning/pretrained_weights/: float_embedder.pt
dbformer/deep-db-learning/scripts/: dataset_info.py  download_dataset.py
(+115 files in other folders)
