[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "db_transformer"
version = "0.1.0"
dependencies = [
    "attrs >= 23.1.0",
    "sqlalchemy >= 2.0.0",
    "tqdm >= 4.65.0",
    "inflect >= 6.0.0",
    "unidecode >= 1.3.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["db_transformer*"]

[tool.black]
line-length = 92